# idle-terminal

./: CLAUDE.md  Cargo.toml  README.md
src/: action.rs  app.rs  errors.rs  event.rs  layout.rs  logging.rs  main.rs  theme.rs  tui.rs
src/components/: dashboard.rs  header.rs  log_stream.rs  mod.rs  network_map.rs  server_rack.rs  status_bar.rs  task_terminal.rs
src/game/: buildings.rs  events.rs  formulas.rs  mod.rs  network_info.rs  progression.rs  resources.rs  save.rs  state.rs  tasks.rs  upgrades.rs
