[package]
name = "idle-terminal"
version = "0.1.0"
edition = "2021"
description = "A TUI-based idle game with an IT/DevOps theme"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
futures = "0.3"
rand = "0.8"
hostname = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
